--- a/src/main/resources/templates/error.html
+++ b/src/main/resources/templates/error.html
@@ -22,7 +22,7 @@
 <body>
 	<p>Your web is now under construction.</p>
 	<div>
-		<img src="404.png" alt:404 image><br><br>
+		<img src="/img/404.png"><br><br>
 		<a href="javascript:history.go(-1);">Return</a>
 	</div>
 </body>
