--- a/src/main/resources/templates/employee/change_password.html
+++ b/src/main/resources/templates/employee/change_password.html
@@ -4,12 +4,16 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+
     <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.datatables.net/1.10.21/css/dataTables.bootstrap4.min.css">
     <link rel="stylesheet" th:href="@{/css/style.css}" />
+    
     <title>Employee Management System</title>
+
 
 </head>
 
@@ -17,30 +21,34 @@
     <div th:replace="/fragements/side_bar_template :: side_bar"></div>
     <div class="content">
         <div th:replace="/fragements/header_template :: header"></div>
-        <div class="page">
-            <table class="table table-bordered table-striped">
-                <thead class ="thead-dark">
-                    <tr>
-                        <th>Manager Name</th>
-                        <th>Employee Name</th>
-                        <th>Function</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <!-- th:each loops over each member of ${employees} list
-                tempEmployee is a randomly declared variable used in this html page only, employees is the model attribute made in the EmployeeController -->
-                    <tr th:each=" temp: ${relations}">
-                        <td th:text="${temp.manager_last_name } + ' ' + ${temp.manager_first_name}"></td>
-                        <td th:text="${temp.employee_last_name } + ' ' + ${temp.employee_first_name}"></td>
-                        <td>
-                            <a th:href="@{/admin/delete_relation(id = ${temp.id})}"
-                        class="btn btn-info btn-sm">Delete</a></td>
-                    </tr>
-                </tbody>
-            </table>
-            <a th:href="@{/admin/add_relation}" class="btn btn-info col-1">Add</a>
-        </div>
         <div th:replace="/fragements/footer_template :: footer"></div>
+        <div class="page">
+			  <div id="signupbox" style="margin-top: 50px" class="mainbox col-md-3 col-md-offset-2 col-sm-6 col-sm-offset02">
+				<div class="panel panel-info">
+				  <div class="panel-heading">
+					<div class="panel-title">Change Password</div>
+				  </div>
+				  <div style="padding-top: 10px" class="panel-body"> 
+					<!-- Signup Form -->
+					<form th:action="@{/employee/process-password}" th:object="${psdto}" method="POST">
+					  <div style="margin-bottom:10px;">
+						<input class="form-control" type="password" th:field="*{newpass}" placeholder="New Password">
+					  </div>
+					  <div class="error" th:if="*{#fields.hasErrors('newpass')}" th:errors="*{newpass}"></div>
+					  <div style="margin-bottom:10px;">
+						<input class="form-control" type="password" th:field="*{newpassr}" placeholder="Type New Password Again">
+					  </div>
+					  <div class="error" th:if="*{#fields.hasErrors('global')}" th:errors="*{global}"></div>
+					  <button style="width:80px;" type="submit" class="btn btn-success">Submit</button>
+					  <button style="margin-left: 15px;width:80px;" type="reset" class="btn btn-secondary">Reset</button>
+					  <button style="margin-left: 15px;width:80px;" type="button" class="btn btn-secondary"
+									th:onclick="window.location.href='/'">Return</button>
+					</form>
+				  </div>
+				</div>
+			  </div>
+			</div>
+
     </div>
 </body>
 <!-- jQuery first, then Popper.js, then Bootstrap JS -->
