--- a/src/main/resources/templates/fragements/side_bar_template.html
+++ b/src/main/resources/templates/fragements/side_bar_template.html
@@ -21,7 +21,7 @@
                     </li>
                     <li>
                         <a sec:authorize="hasAnyRole('ADMIN')" th:href="@{/admin/show_users}"><i
-                                class="fa fa-home"></i>Manage Authorities</a>
+                                class="fa fa-home"></i>Manage Account</a>
                     </li>
                     <li>
                         <a sec:authorize="hasAnyRole('ADMIN')" th:href="@{/admin/show_relation}"><i
@@ -38,6 +38,10 @@
                             <li><a href="#">All Employee Schedule</a></li>
                         </ul>
                     </li>
+					<li>
+                        <a th:href="@{/employee/change_password}"><i
+                                class="fa fa-home"></i>Change Password</a>
+					</li>
                 </ul>
             </div>
         </div>
