--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -192,7 +192,7 @@ body{
   display: block;
 }
 
-.side-navbar.shrink .sidenav-header-inner {
+.side-navbar.shrink .sidenav-header-inner h3, .side-navbar.shrink .sidenav-header-inner span{
   display: none;
 }
 
