--- a/src/main/resources/templates/admin/show_users.html
+++ b/src/main/resources/templates/admin/show_users.html
@@ -1,78 +1,91 @@
 <html>
-
 <head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+<!-- Required meta tags -->
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+<!-- Bootstrap CSS -->
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://cdn.datatables.net/1.10.21/css/dataTables.bootstrap4.min.css">
-    <link rel="stylesheet" th:href="@{/css/style.css}" />
-    
-    <title>Employee Management System</title>
-
-
+<link rel="stylesheet" href="https://cdn.datatables.net/1.10.21/css/dataTables.bootstrap4.min.css">
+<link rel="stylesheet" th:href="@{/css/style.css}" />
+<title>Employee Management System</title>
 </head>
 
 <body>
-    <div th:replace="/fragements/side_bar_template :: side_bar"></div>
-    <div class="content">
-        <div th:replace="/fragements/header_template :: header"></div>
-        <div th:replace="/fragements/footer_template :: footer"></div>
-        <div class="page">
-            <table class="table table-bordered table-striped">
-                <thead class ="thead-dark">
-                    <tr>
-                        <th>Account</th>
-						<th>Enabled</th>
-						<th>Authorities</th>
-                        <th colspan="2">Function</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <!-- th:each loops over each member of ${employees} list
-                tempEmployee is a randomly declared variable used in this html page only, employees is the model attribute made in the EmployeeController -->
-                    <tr th:each=" temp: ${users}">
-						<td th:text="${temp.username}"></td>
-						<td th:text="${temp.enabled}==1?'Yes':'No'"></td>
-						<td th:text="${temp.auth}"></td>
-						<td th:if="!${temp.auth!='ROLE_ADMIN'}"></td>
-						<td th:if="${temp.auth!='ROLE_ADMIN'}">
-							<form style="height:15px;" method="POST" th:action="@{/admin/process-enable(username=${temp.username})}">
-							<button th:if="${temp.enabled}==1" class="btn btn-info" type="submit">Disable</button>
-                            <button th:if="${temp.enabled}==0" class="btn btn-info" type="submit">Enable</button>
-                            <a sec:authorize="hasAnyRole('ADMIN')" th:href="@{/admin/reset-password(username = ${temp.username})}"
-                        class="btn btn-info">Reset Password</a>
-							</form>
-						</td>
-						<td th:if="!${temp.auth!='ROLE_ADMIN'}"></td>
-						<td th:if="${temp.auth!='ROLE_ADMIN'}">
-							<form style="height:15px;" method="POST" th:action="@{/admin/process-position(username=${temp.username})}">
-							<button th:if="${temp.auth}!='ROLE_MANAGER'" class="btn btn-info" type="submit">Promotion</button>
-							<button th:if="${temp.auth}=='ROLE_MANAGER'" class="btn btn-info" type="submit">Demotion</button>
-							</form>
-						</td>
-                    </tr>
-                </tbody>
-            </table>
-        </div>
+<div th:replace="/fragements/side_bar_template :: side_bar"></div>
+<div class="content">
+  <div th:replace="/fragements/header_template :: header"></div>
+  <div th:replace="/fragements/footer_template :: footer"></div>
+  <div class="page">
+	  <div class="container mb-3 mt-3">
+	    <table class="table table-striped table-bordered mydatatable w-100">
+	      <!-- Attribute Declaration -->
+	      <thead>
+	        <tr>
+	          <th>User Name</th>
+	          <th>Enabled</th>
+	          <th>Authorities</th>
+	          <th colspan="2">Function</th>
+	        </tr>
+	        </thead>
+	      <tbody>
+	        <!-- Actual data -->
+	        <tr th:each=" temp: ${users}">
+	          <td th:text="${temp.username}"></td>
+	          <td th:text="${temp.enabled}==1?'Yes':'No'"></td>
+	          <td th:text="${temp.auth}"></td>
+	          <td th:if="!${temp.auth!='ROLE_ADMIN'}"></td>
+	          <td th:if="${temp.auth!='ROLE_ADMIN'}"><form style="height:15px;" method="POST" th:action="@{/admin/process-enable(username=${temp.username})}">
+	              <button th:if="${temp.enabled}==1" class="btn btn-info" type="submit">Disable</button>
+	              <button th:if="${temp.enabled}==0" class="btn btn-info" type="submit">Enable</button>
+	              <a sec:authorize="hasAnyRole('ADMIN')" th:href="@{/admin/reset-password(username = ${temp.username})}"
+	                        class="btn btn-info">Reset Password</a>
+	            </form></td>
+	          <td th:if="!${temp.auth!='ROLE_ADMIN'}"></td>
+	          <td th:if="${temp.auth!='ROLE_ADMIN'}"><form style="height:15px;" method="POST" th:action="@{/admin/process-position(username=${temp.username})}">
+	              <button th:if="${temp.auth}!='ROLE_MANAGER'" class="btn btn-info" type="submit">Promotion</button>
+	              <button th:if="${temp.auth}=='ROLE_MANAGER'" class="btn btn-info" type="submit">Demotion</button>
+	            </form></td>
+	        </tr>
+	      </tbody>
+	    </table>
+	  </div>
+	<div>
+    <a th:href="@{/admin/show_users(start=0)}">First Page</a>
+    <a th:if="${not pagehelper.isIsFirstPage()}" th:href="@{/admin/show_users(start=${pagehelper.getPageNum()-1})}">Previous Page</a>
+    <a th:if="${not pagehelper.isIsLastPage()}" th:href="@{/admin/show_users(start=${pagehelper.getPageNum()+1})}">Next Page</a>
+    <a th:href="@{/admin/show_users(start=${pagehelper.getPageSize()-1})}">Last Page</a>
     </div>
+  </div>
+
+</div>
 </body>
+
 <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+
 <script src="https://code.jquery.com/jquery-3.5.1.min.js"
-    integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+   		integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" 
+    	crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
-    integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
-    crossorigin="anonymous"></script>
+        integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+        crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
-    integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
-    crossorigin="anonymous"></script>
+        integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+        crossorigin="anonymous"></script>
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+        crossorigin="anonymous"></script>
+        
+       
+<!-- Datatables JS -->
+<script src="https://cdn.datatables.net/1.10.21/js/jquery.dataTables.min.js"></script>
+<script src="https://cdn.datatables.net/1.10.21/js/dataTables.bootstrap4.min.js"></script>
 <script>
     // Get the current year for the copyright
     $('#year').text(new Date().getFullYear());
+    $('.mydatatable').DataTable();
 </script>
 
 <!-- Template js -->
