--- a/src/main/resources/templates/fragements/side_bar_template.html
+++ b/src/main/resources/templates/fragements/side_bar_template.html
@@ -13,7 +13,7 @@
                 <div class="sidenav-header-logo"><a href="" class="brand-small text-center"></a></div>
             </div>
             <div class="sidenav-menu">
-                <strong class="sidenav-menu-heading mb-5 pb-5">Current Page</strong>
+                <strong id="side-tag-text" class="sidenav-menu-heading mb-5 pb-5">Current Page</strong>
                 <!-- List of functions -->
                 <ul id="side-main-menu" class="side-menu list-unstyled">
                     <li>
