--- a/src/main/resources/templates/admin/show_users.html
+++ b/src/main/resources/templates/admin/show_users.html
@@ -52,12 +52,6 @@
 	      </tbody>
 	    </table>
 	  </div>
-	<div>
-    <a th:href="@{/admin/show_users(start=0)}">First Page</a>
-    <a th:if="${not pagehelper.isIsFirstPage()}" th:href="@{/admin/show_users(start=${pagehelper.getPageNum()-1})}">Previous Page</a>
-    <a th:if="${not pagehelper.isIsLastPage()}" th:href="@{/admin/show_users(start=${pagehelper.getPageNum()+1})}">Next Page</a>
-    <a th:href="@{/admin/show_users(start=${pagehelper.getPageSize()-1})}">Last Page</a>
-    </div>
   </div>
 
 </div>
@@ -66,26 +60,18 @@
 <!-- jQuery first, then Popper.js, then Bootstrap JS -->
 
 <script src="https://code.jquery.com/jquery-3.5.1.min.js"
-   		integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" 
-    	crossorigin="anonymous"></script>
+    integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
-        integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
-        crossorigin="anonymous"></script>
+    integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+    crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
-        integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
-        crossorigin="anonymous"></script>
-<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-        crossorigin="anonymous"></script>
+    integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+    crossorigin="anonymous"></script>
         
-       
-<!-- Datatables JS -->
-<script src="https://cdn.datatables.net/1.10.21/js/jquery.dataTables.min.js"></script>
-<script src="https://cdn.datatables.net/1.10.21/js/dataTables.bootstrap4.min.js"></script>
+
 <script>
     // Get the current year for the copyright
     $('#year').text(new Date().getFullYear());
-    $('.mydatatable').DataTable();
 </script>
 
 <!-- Template js -->
