--- a/src/main/resources/templates/manager/show_employee_list.html
+++ b/src/main/resources/templates/manager/show_employee_list.html
@@ -11,17 +11,38 @@
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.datatables.net/1.10.21/css/dataTables.bootstrap4.min.css">
     <link rel="stylesheet" th:href="@{/css/style.css}" />
+    
     <title>Employee Management System</title>
 </head>
 
 <body>
-	<div th:replace="/fragements/side_bar_template :: side_bar"></div>
+
 	<div class="content">
+	    <div th:replace="/fragements/side_bar_template :: side_bar"></div>
 		<div th:replace="/fragements/header_template :: header"></div>
 		<div th:replace="/fragements/footer_template :: footer"></div>
 		<div class="page">
-            <table class="table table-bordered table-striped">
-                <thead class ="thead-dark">
+		<div class="container-fluid">
+		
+		<div class="row mt-3 mb-3">
+			<div class="col-lg-1 col-md-2 col-sm-3">
+				<select id="select_entries" class="browser-default custom-select">
+				  <option value="show_employee_list?page=1&size=5">5</option>
+				  <option value="show_employee_list?page=1&size=10">10</option>
+				  <option value="show_employee_list?page=1&size=20">20</option>
+				</select>
+			</div>
+			<div class="col-lg-8 col-md-5 col-sm-2"></div>
+			<div class="input-group col-lg-3 col-md-5 col-sm-7">
+			<div class="input-group-prepend"><a id="search" href="#" class="input-group-text">Search</a></div>
+			<input id="search-field" class="form-control">
+			</div>
+		</div>
+		
+		<div class="row">
+		<div class="col">
+            <table id="t" class="table table-striped table-bordered">
+                <thead>
                     <tr>
                         <th>Employee Name</th>
 						<th>Email</th>
@@ -34,7 +55,7 @@
                 <tbody>
                     <!-- th:each loops over each member of ${employees} list
                 tempEmployee is a randomly declared variable used in this html page only, employees is the model attribute made in the EmployeeController -->
-                    <tr th:each=" temp, iStat: ${employeePage.content}" th:style="${iStat.odd}?'font-weight:bold;'" th:alt-title="${iStat.even}?'even':'odd'">
+                    <tr th:each=" temp: ${employeePage.content}">
                         <td th:text="${temp.lastname} + ' ' + ${temp.firstname}"></td>
 						<td th:text="${temp.email}"></td>
 						<td th:text="${temp.phone}"></td>
@@ -48,14 +69,27 @@
                     </tr>
                 </tbody>
 			</table>
-			<div th:if="${employeePage.totalPages>0}" class="pagination"
-				th:each="pageNumber : ${pageNumbers}">
-				<a th:href="@{/manager/show_employee_list (page=${pageNumber}, size=${employeePage.size})}"
-					th:text=${pageNumber}
-					th:class="${pageNumber==employeePage.number + 1}? active"></a>
+		</div>
+		</div>
+		
+		<div class="row">
+			<div class="col-sm-3">
+			<a sec:authorize="hasAnyRole('ADMIN')" th:href="@{/admin/add_employee}" class="btn btn-info">Add</a>
 			</div>
-			
-			<a sec:authorize="hasAnyRole('ADMIN')" th:href="@{/admin/add_employee}" class="btn btn-info col-1">Add</a>
+			<div class="col">
+			<div class="pull-right" th:if="${employeePage.totalPages>0}">
+				<span th:each="pageNumber : ${pageNumbers}">
+				<a class="btn btn-light" 
+				th:href="@{/manager/show_employee_list (page=${pageNumber}, size=${employeePage.size},key=${key})}" th:text="${pageNumber}"
+				th:if="${pageNumber}==1 or ${pageNumber==employeePage.totalPages} or (${pageNumber}<=${currentpage}+2 and ${currentpage-2}<=${pageNumber})">
+				</a>
+				<span th:if="${pageNumber!=1} and ${pageNumber!=employeePage.totalPages} and (${pageNumber}==${currentpage}+3 or ${currentpage-3}==${pageNumber})">...</span>
+				</span>
+			</div>
+			</div>
+		</div>
+		
+		</div>
 		</div>
 	</div>
 
