One page perfect

--- a/src/main/resources/templates/fragements/header_template.html
+++ b/src/main/resources/templates/fragements/header_template.html
@@ -7,7 +7,7 @@
 					<div class="navbar-header">
 						<a id="toggle-btn" data-toggle="collapse" href="#" class="menu-btn"><i
 								class="fa fa-amazon"></i></a>
-						<a href="index.html" class="navbar-brand">
+						<a href="/" class="navbar-brand">
 							<div class="brand-text d-none d-md-inline-block"><span>Employee </span>
 								<strong class="text-primary">Management</strong></div>
 						</a>
