--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -386,9 +386,7 @@ body{
 */
 .main-footer{
   border-top: slateblue 2px solid;
-  position: absolute;
   width: 100%;
-  bottom: 0;
   background: #222;
   padding: 5px 0;
   color: wheat;
@@ -408,7 +406,6 @@ body{
     width: calc(100% - 200px);
     background-color: #F4F7FA;
     min-height: 100vh;
-    padding-bottom: 50px;
 }
 
 .content.active {
@@ -418,10 +415,7 @@ body{
 
 .page{
     width:100%;
-    height:85%;
-    position: absolute;
-    top:3rem;
-    right:0;
+    min-height:calc(100vh - 102px);
 }
 .page a{
     text-decoration: none;
