--- a/src/main/resources/templates/fragements/footer_template.html
+++ b/src/main/resources/templates/fragements/footer_template.html
@@ -3,15 +3,16 @@
 	<footer class="main-footer">
 		<div class="container-fluid">
 			<div class="row">
-				<div class="col-sm-3">
+				<div class="col-sm-2 text-center">
 					<p>Employee Management</p>
 				</div>
-				<div class="col-sm-3">
+				<div class="col-sm-4 text-center">
 					<p>Copyright &copy; <span id="year"></span> TYY</p>
 				</div>
-				<div class="col-sm-6 text-right">
-					<p> Version 0.0.3
-					</p>
+				<div class="col-sm-4 text-center">
+				</div>
+				<div class="col-sm-2 text-center">
+					<p>Version 0.0.3</p>
 				</div>
 			</div>
 		</div>
