--- a/src/main/resources/templates/manager/show_employee_list.html
+++ b/src/main/resources/templates/manager/show_employee_list.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" th:href="@{/css/style.css}" />
     
     <title>Employee Management System</title>
+
 </head>
 
 <body>
@@ -20,11 +21,11 @@
 	<div class="content">
 	    <div th:replace="/fragements/side_bar_template :: side_bar"></div>
 		<div th:replace="/fragements/header_template :: header"></div>
-		<div th:replace="/fragements/footer_template :: footer"></div>
+
 		<div class="page">
-		<div class="container-fluid">
 		
-		<div class="row mt-3 mb-3">
+		<div class="container-fluid">
+		<div class="row pt-3 pb-3">
 			<div class="col-lg-1 col-md-2 col-sm-3">
 				<select id="select_entries" class="browser-default custom-select">
 				  <option value="show_employee_list?page=1&size=5">5</option>
@@ -40,7 +41,7 @@
 		</div>
 		
 		<div class="row">
-		<div class="col">
+		<div class="col" style="overflow:auto;">
             <table id="t" class="table table-striped table-bordered">
                 <thead>
                     <tr>
@@ -55,6 +56,7 @@
                 <tbody>
                     <!-- th:each loops over each member of ${employees} list
                 tempEmployee is a randomly declared variable used in this html page only, employees is the model attribute made in the EmployeeController -->
+                    <tr th:if="${totalPage==0}"><td colspan=6 class="text-center">Can not find any result!</td></tr>
                     <tr th:each=" temp: ${employeePage.content}">
                         <td th:text="${temp.lastname} + ' ' + ${temp.firstname}"></td>
 						<td th:text="${temp.email}"></td>
@@ -62,9 +64,9 @@
 						<td th:text="${temp.username}"></td>
 						<td><span th:if="${temp.ismanager}==1">Manager</span><span th:if="${temp.ismanager}==0">Employee</span></td>
                         <td><a sec:authorize="hasAnyRole('ADMIN')" th:href="@{/admin/update_employee(id = ${temp.id})}"
-                        class="btn btn-info btn-sm">Update</a>
+                        class="btn btn-info btn-sm mb-1 mt-1">Update</a>
                             <a sec:authorize="hasAnyRole('ADMIN')" th:href="@{/admin/delete_employee(id = ${temp.id})}"
-                        class="btn btn-info btn-sm">Delete</a>
+                        class="btn btn-info btn-sm mb-1 mt-1">Delete</a>
                         <span sec:authorize="hasAnyRole('MANAGER')">Access denied!</span></td>
                     </tr>
                 </tbody>
@@ -72,25 +74,33 @@
 		</div>
 		</div>
 		
-		<div class="row">
-			<div class="col-sm-3">
+		<div class="row pt-3 pb-3">
+			<div class="col-3">
 			<a sec:authorize="hasAnyRole('ADMIN')" th:href="@{/admin/add_employee}" class="btn btn-info">Add</a>
 			</div>
-			<div class="col">
+			<div class="col-9">
 			<div class="pull-right" th:if="${employeePage.totalPages>0}">
 				<span th:each="pageNumber : ${pageNumbers}">
+				<span th:if="${key}!=''">
 				<a class="btn btn-light" 
 				th:href="@{/manager/show_employee_list (page=${pageNumber}, size=${employeePage.size},key=${key})}" th:text="${pageNumber}"
 				th:if="${pageNumber}==1 or ${pageNumber==employeePage.totalPages} or (${pageNumber}<=${currentpage}+2 and ${currentpage-2}<=${pageNumber})">
 				</a>
+				</span>
+				<span th:if="${key}==''">
+				<a class="btn btn-light" 
+				th:href="@{/manager/show_employee_list (page=${pageNumber}, size=${employeePage.size})}" th:text="${pageNumber}"
+				th:if="${pageNumber}==1 or ${pageNumber==employeePage.totalPages} or (${pageNumber}<=${currentpage}+2 and ${currentpage-2}<=${pageNumber})">
+				</a>
+				</span>
 				<span th:if="${pageNumber!=1} and ${pageNumber!=employeePage.totalPages} and (${pageNumber}==${currentpage}+3 or ${currentpage-3}==${pageNumber})">...</span>
 				</span>
 			</div>
 			</div>
 		</div>
-		
 		</div>
 		</div>
+		<div th:replace="/fragements/footer_template :: footer"></div>
 	</div>
 
 </body>
