--- a/src/main/resources/templates/employee/my_schedule.html
+++ b/src/main/resources/templates/employee/my_schedule.html
@@ -1,15 +1,40 @@
 <html>
 
 <head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link rel="stylesheet" th:href="@{/css/style.css}" />
-    <title>Employee Management System</title>
+<!-- Required meta tags -->
+<meta charset="utf-8">
+<meta name="viewport"
+	content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+<!-- Bootstrap CSS -->
+<link rel="stylesheet"
+	href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+<link rel="stylesheet"
+	href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+	integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
+	crossorigin="anonymous">
+<link rel="stylesheet"
+	href="https://cdn.datatables.net/1.10.21/css/dataTables.bootstrap4.min.css">
+<link rel="stylesheet" th:href="@{/css/style.css}" />
+
+<!-- jQuery first, then Popper.js, then Bootstrap JS -->
+<script src="https://code.jquery.com/jquery-3.5.1.min.js"
+	integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
+	crossorigin="anonymous"></script>
+<script
+	src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+	integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+	crossorigin="anonymous"></script>
+<script
+	src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+	integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+	crossorigin="anonymous"></script>
+
+<!-- Template js -->
+<script th:src="@{/js/template-js.js}"></script>
+
+<title>Employee Management System</title>
+
 </head>
 
 <body>
@@ -17,59 +42,10 @@
     <div class="content">
         <div th:replace="/fragements/header_template :: header"></div>
         <div class="page">
-            <table>
-                <th>N/A</th>
-                <th colspan="2">0</th>
-                <th colspan="2">1</th>
-                <th colspan="2">2</th>
-                <th colspan="2">3</th>
-                <th colspan="2">4</th>
-                <th colspan="2">5</th>
-                <th colspan="2">6</th>
-                <th colspan="2">7</th>
-                <th colspan="2">8</th>
-                <th colspan="2">9</th>
-                <th colspan="2">10</th>
-                <th colspan="2">11</th>
-                <th colspan="2">12</th>
-                <th colspan="2">13</th>
-                <th colspan="2">14</th>
-                <th colspan="2">15</th>
-                <th colspan="2">16</th>
-                <th colspan="2">17</th>
-                <th colspan="2">18</th>
-                <th colspan="2">19</th>
-                <th colspan="2">20</th>
-                <th colspan="2">21</th>
-                <th colspan="2">22</th>
-                <th colspan="2">23</th>
-                <tr th:each="row: ${psdto}">
-                    <td th:text="${row.day}"></td>
-                    <td th:each="col, stat1 : ${row.time}" 
-                    th:style="${col}==1 ? 'background: yellow' : 'background: white'"
-                    th:onclick="${col==1}? 'alert(\'a\')' : '' ">
-                    </td>
-                </tr>
-            </table>
+        	<p>This page is still in progress!</p>
         </div>
         <div th:replace="/fragements/footer_template :: footer"></div>
     </div>
 
 </body>
-<!-- jQuery first, then Popper.js, then Bootstrap JS -->
-<script src="https://code.jquery.com/jquery-3.5.1.min.js"
-    integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
-    integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
-    crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
-    integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
-    crossorigin="anonymous"></script>
-<script>
-    // Get the current year for the copyright
-    $('#year').text(new Date().getFullYear());
-</script>
-
-<!-- Template js -->
-<script th:src="@{/js/template-js.js}"></script>
 </html>
