--- a/src/main/resources/templates/employee/profile.html
+++ b/src/main/resources/templates/employee/profile.html
@@ -1,60 +1,72 @@
 <html>
 
 <head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link rel="stylesheet" th:href="@{/css/style.css}" />
+<!-- Required meta tags -->
+<meta charset="utf-8">
+<meta name="viewport"
+	content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <title>Employee Management System</title>
-    
+<!-- Bootstrap CSS -->
+<link rel="stylesheet"
+	href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+<link rel="stylesheet"
+	href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+	integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
+	crossorigin="anonymous">
+<link rel="stylesheet"
+	href="https://cdn.datatables.net/1.10.21/css/dataTables.bootstrap4.min.css">
+<link rel="stylesheet" th:href="@{/css/style.css}" />
+
+<!-- jQuery first, then Popper.js, then Bootstrap JS -->
+<script src="https://code.jquery.com/jquery-3.5.1.min.js"
+	integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
+	crossorigin="anonymous"></script>
+<script
+	src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+	integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+	crossorigin="anonymous"></script>
+<script
+	src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+	integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+	crossorigin="anonymous"></script>
+<!-- Template js -->
+<script th:src="@{/js/template-js.js}"></script>
+
+<title>Employee Management System</title>
+
 </head>
 
 <body>
-    <div th:replace="/fragements/side_bar_template :: side_bar"></div>
-    <div class="content">
-        <div th:replace="/fragements/header_template :: header"></div>
-        <div id="page">
-            <form th:action="@{/employee/profile/save}" th:object="${employee}" method="POST">
-                <input type="hidden" th:field="*{id}">
-                <input type="hidden" th:field="*{ismanager}">
-                <input class="form-control" type="text" readonly="readonly" th:field="*{lastname}">
-                <input class="form-control" type="text" readonly="readonly" th:field="*{firstname}">
-                <input class="form-control" type="text" th:field="*{phone}" placeholder="Phone">
-                <div class="error" th:if="*{#fields.hasErrors('phone')}" th:errors="*{phone}"></div>
-                <input class="form-control" type="text" th:field="*{email}" placeholder="Email">
-                <div class="error" th:if="*{#fields.hasErrors('email')}" th:errors="*{email}"></div>
-                <input class="form-control" type="text" readonly="readonly" th:field="*{username}">
-                <input type="submit" value="Update" class="btn btn-info mt-2">
-                <button style="margin-left: 10px;width:80px;" type="button" class="btn btn-secondary mt-2"
-                th:onclick="window.location.href='/'">Return</button>
+	<div th:replace="/fragements/side_bar_template :: side_bar"></div>
+	<div class="content">
+		<div th:replace="/fragements/header_template :: header"></div>
+		<div id="page">
+			<form th:action="@{/employee/profile/save}" th:object="${employee}"
+				method="POST">
+				<input type="hidden" th:field="*{id}"> <input type="hidden"
+					th:field="*{ismanager}"> <input class="form-control"
+					type="text" readonly="readonly" th:field="*{lastname}"> <input
+					class="form-control" type="text" readonly="readonly"
+					th:field="*{firstname}"> <input class="form-control"
+					type="text" th:field="*{phone}" placeholder="Phone">
+				<div class="error" th:if="*{#fields.hasErrors('phone')}"
+					th:errors="*{phone}"></div>
+				<input class="form-control" type="text" th:field="*{email}"
+					placeholder="Email">
+				<div class="error" th:if="*{#fields.hasErrors('email')}"
+					th:errors="*{email}"></div>
+				<input class="form-control" type="text" readonly="readonly"
+					th:field="*{username}"> <input type="submit" value="Update"
+					class="btn btn-info mt-2">
+				<button style="margin-left: 10px; width: 80px;" type="button"
+					class="btn btn-secondary mt-2"
+					th:onclick="window.location.href='/'">Return</button>
 
-            </form>
-        </div>
-        <div th:replace="/fragements/footer_template :: footer"></div>
-    </div>
-
+			</form>
+		</div>
+		<div th:replace="/fragements/footer_template :: footer"></div>
+	</div>
 
 </body>
-<!-- jQuery first, then Popper.js, then Bootstrap JS -->
-<script src="https://code.jquery.com/jquery-3.5.1.min.js"
-    integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
-    integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
-    crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
-    integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
-    crossorigin="anonymous"></script>
-<script>
-    // Get the current year for the copyright
-    $('#year').text(new Date().getFullYear());
-</script>
-
-<!-- Template js -->
-<script th:src="@{/js/template-js.js}"></script>
 </html>
 
