--- a/src/main/resources/templates/fragements/footer_template.html
+++ b/src/main/resources/templates/fragements/footer_template.html
@@ -7,22 +7,15 @@
 					<p>Employee Management</p>
 				</div>
 				<div class="col-sm-4 text-center">
-					<p>Copyright &copy; <span id="year"></span> TYY</p>
+					<p>
+						Copyright &copy; <span id="year"></span> TYY
+					</p>
 				</div>
-				<div class="col-sm-4 text-center">
-				</div>
+				<div class="col-sm-4 text-center"></div>
 				<div class="col-sm-2 text-center">
-					<p>Version 0.0.3</p>
+					<p>Version 0.0.4</p>
 				</div>
 			</div>
 		</div>
 	</footer>
-
-    <script>
-        // Get the current year for the copyright
-        $('#year').text(new Date().getFullYear());
-    </script>
-
-    <!-- Template js -->
-    <script th:src="@{/js/template-js.js}"></script>
 </div>
