--- a/src/main/resources/templates/fragements/header_template.html
+++ b/src/main/resources/templates/fragements/header_template.html
@@ -3,17 +3,20 @@
 		<!-- Top Nav Bar -->
 		<nav class="navbar navbar-dark bg-dark p-1">
 			<div class="container-fluid">
-				<div class="navbar-holder d-flex align-items-center justify-content-between">
+				<div
+					class="navbar-holder d-flex align-items-center justify-content-between">
 					<div class="navbar-header">
-						<a id="toggle-btn" data-toggle="collapse" href="#" class="menu-btn"><i
-								class="fa fa-amazon"></i></a>
-						<a href="/" class="navbar-brand">
-							<div class="brand-text d-none d-md-inline-block"><span>Employee </span>
-								<strong class="text-primary">Management</strong></div>
+						<a id="toggle-btn" data-toggle="collapse" href="#"
+							class="menu-btn"><i class="fa fa-amazon"></i></a> <a href="/"
+							class="navbar-brand">
+							<div class="brand-text d-none d-md-inline-block">
+								<span>Employee </span> <strong class="text-primary">Management</strong>
+							</div>
 						</a>
 					</div>
 					<!--Top nav menu -->
-					<ul class="nav-menu list-unstyled d-flex flex-md-row align-items-md-center">
+					<ul
+						class="nav-menu list-unstyled d-flex flex-md-row align-items-md-center">
 						<!-- Notifications -->
 						<li class="px-2"><a href=""><i class="fa fa-bell"></i></a></li>
 
@@ -22,11 +25,11 @@
 						<!-- Language? -->
 
 						<!-- Logout -->
-						<li class="nav-item dropdown">
-							<a th:href="@{/logout}" class=" nav-link logout">
-								<span class="d-none d-sm-inline-block">Logout</span><i class="fa fa-sign-out"></i>
-							</a>
-						</li>
+						<li class="nav-item dropdown"><a th:href="@{/logout}"
+							class=" nav-link logout"> <span
+								class="d-none d-sm-inline-block">Logout</span><i
+								class="fa fa-sign-out"></i>
+						</a></li>
 					</ul>
 				</div>
 			</div>
