--- a/src/main/resources/templates/admin/show_relation.html
+++ b/src/main/resources/templates/admin/show_relation.html
@@ -38,9 +38,9 @@
 </head>
 
 <body>
-	<div th:replace="/fragements/side_bar_template :: side_bar"></div>
+	<div th:replace="fragements/side_bar_template :: side_bar"></div>
 	<div class="content">
-		<div th:replace="/fragements/header_template :: header"></div>
+		<div th:replace="fragements/header_template :: header"></div>
 		<div class="page">
 
 			<div class="container-fluid">
@@ -101,12 +101,14 @@
 								th:if="${key}!=''"> <a class="btn btn-light"
 									th:href="@{/admin/show_relation (page=${pageNumber}, size=${MERPage.size},key=${key})}"
 									th:text="${pageNumber}"
-									th:if="${pageNumber}==1 or ${pageNumber==MERPage.totalPages} or (${pageNumber}<=${currentpage}+2 and ${currentpage-2}<=${pageNumber})">
+									th:if="${pageNumber}==1 or ${pageNumber==MERPage.totalPages} or (${pageNumber}<=${currentpage}+2 and ${currentpage-2}<=${pageNumber})"
+									th:classappend="${currentpage}==${pageNumber}?'active':''">
 								</a>
 							</span> <span th:if="${key}==''"> <a class="btn btn-light"
 									th:href="@{/admin/show_relation (page=${pageNumber}, size=${MERPage.size})}"
 									th:text="${pageNumber}"
-									th:if="${pageNumber}==1 or ${pageNumber==MERPage.totalPages} or (${pageNumber}<=${currentpage}+2 and ${currentpage-2}<=${pageNumber})">
+									th:if="${pageNumber}==1 or ${pageNumber==MERPage.totalPages} or (${pageNumber}<=${currentpage}+2 and ${currentpage-2}<=${pageNumber})"
+									th:classappend="${currentpage}==${pageNumber}?'active':''">
 								</a>
 							</span> <span
 								th:if="${pageNumber!=1} and ${pageNumber!=MERPage.totalPages} and (${pageNumber}==${currentpage}+3 or ${currentpage-3}==${pageNumber})">...</span>
@@ -116,7 +118,7 @@
 				</div>
 			</div>
 		</div>
-		<div th:replace="/fragements/footer_template :: footer"></div>
+		<div th:replace="fragements/footer_template :: footer"></div>
 	</div>
 </body>
 </html>
