--- a/src/main/resources/templates/system/head.html
+++ b/src/main/resources/templates/system/head.html
@@ -29,7 +29,7 @@
 	src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
 	integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
 	crossorigin="anonymous"></script>
-
+	
 <!-- Template js -->
 <script th:src="@{/js/template-js.js}"></script>
 
@@ -38,14 +38,44 @@
 </head>
 
 <body>
-    <div th:replace="fragements/side_bar_template :: side_bar"></div>
-    <div class="content">
-        <div th:replace="fragements/header_template :: header"></div>
-        <div class="page">
-        	<p>This page is still in progress!</p>
-        </div>
-        <div th:replace="fragements/footer_template :: footer"></div>
-    </div>
+	<div class="content">
+	<header class="header">
+		<!-- Top Nav Bar -->
+		<nav class="navbar navbar-dark bg-dark p-1">
+			<div class="container-fluid">
+				<div
+					class="navbar-holder d-flex align-items-center justify-content-between">
+					<div class="navbar-header">
+						<a id="toggle-btn" data-toggle="collapse" href="#"
+							class="menu-btn"><i class="fa fa-amazon"></i></a> <a href="/"
+							class="navbar-brand">
+							<div class="brand-text d-none d-md-inline-block">
+								<span>Employee </span> <strong class="text-primary">Management</strong>
+							</div>
+						</a>
+					</div>
+					<!--Top nav menu -->
+					<ul
+						class="nav-menu list-unstyled d-flex flex-md-row align-items-md-center">
+						<!-- Notifications -->
+						<li class="px-2"><a href=""><i class="fa fa-bell"></i></a></li>
 
+						<!-- Message -->
+						<li class="px-2"><a href=""><i class="fa fa-envelope"></i></a></li>
+						<!-- Language? -->
+
+						<!-- Logout -->
+						<li class="nav-item dropdown"><a th:href="@{/logout}"
+							class=" nav-link logout"> <span
+								class="d-none d-sm-inline-block">Logout</span><i
+								class="fa fa-sign-out"></i>
+						</a></li>
+					</ul>
+				</div>
+			</div>
+		</nav>
+	</header>
+	</div>
 </body>
+
 </html>
