--- a/src/main/resources/templates/work-on/hi.html
+++ b/src/main/resources/templates/work-on/hi.html
@@ -1,11 +1,8 @@
 <html>
 
 <head>
-<!-- Required meta tags -->
-<meta charset="utf-8">
-<meta name="viewport"
-	content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
+	<title>title</title>
+</head>
 <!-- Bootstrap CSS -->
 <link rel="stylesheet"
 	href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -29,23 +26,23 @@
 	src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
 	integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
 	crossorigin="anonymous"></script>
-
-<!-- Template js -->
-<script th:src="@{/js/template-js.js}"></script>
-
-<title>Employee Management System</title>
-
-</head>
-
 <body>
-    <div th:replace="fragements/side_bar_template :: side_bar"></div>
-    <div class="content">
-        <div th:replace="fragements/header_template :: header"></div>
-        <div class="page">
-        	<p>This page is still in progress!</p>
-        </div>
-        <div th:replace="fragements/footer_template :: footer"></div>
-    </div>
+	
+<table class="table table-striped table-bordered">
+	<thead class="thead-dark">
+		<tr>
+			<th>Name work</th>
+			<th>Phone work</th>
+		</tr>
+	</thead>
+	<tbody>
+		<tr th:each=" temp: ${model}">
+			<td th:text="${temp.firstname}"></td>
+			<td th:text="${temp.phone}"></td>
+		</tr>
+	</tbody>
+</table>
 
 </body>
+
 </html>
