side-navbar style fix
 inner h3 and span phone fix

--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -456,7 +456,7 @@ body{
     display: block;
   }
 
-  .side-narbar .sidenav-header-inner{
+  .side-navbar.show-sm .sidenav-header-inner h3, .side-navbar.show-sm .sidenav-header-inner span{
     display:none;
   }
 
